src/objects/BLN_Item__c.object
<CustomObject>
    <fields>
        <fullName>Allow_waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Tickets__c</fullName>
        <description>Stores the count of available tickets by filtering with available ticket status</description>
        <label>Available Tickets</label>
        <summaryFilterItems>
            <field>Ticket__c.Ticket_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Ticket__c.praentidworkflowfill__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Ticket__c.Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency Code</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <label>Discountable</label>
        <picklist>
            <picklistValues>
                <fullName>Not discountable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item level discount (single)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order total level discountable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Pricing_Display_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Early Bird Pricing Display Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Pool__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_status__c</fullName>
        <label>Item status</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_wait_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max wait count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordering__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Settings__c</fullName>
        <label>Ticket_Settings</label>
        <picklist>
            <picklistValues>
                <fullName>Collect info from Buyers only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Collect info from All Attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not collect Attendee info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>addon_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addon only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>addon_parent_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addon parent id</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>image_url__c</fullName>
        <label>Image url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>item_count__c</fullName>
        <label>Item count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>item_name__c</fullName>
        <label>Item name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>max_per_order__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Max per order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>min_per_order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min per order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sale_end__c</fullName>
        <label>Sale end</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sale_start__c</fullName>
        <label>Sale start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>service_fee__c</fullName>
        <label>Service_fee</label>
        <picklist>
            <picklistValues>
                <fullName>Include the Booth Leads fee in to the total ticket price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Booth Leads fee on top of the total ticket price</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>item_name__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>item_type__c</columns>
        <columns>item_count__c</columns>
        <columns>price__c</columns>
        <columns>sale_start__c</columns>
        <columns>sale_end__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Item-{000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>